--- a/q/274973.html
+++ b/q/274973.html
@@ -26,20 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Perl 5 p</td><td>240814T163746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274980#274980">Xcali</a></td></tr>
-<tr d-ix="1"><td>045</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
-<tr d-ix="2"><td>012</td><td>Retina 0.8.2</td><td>240814T155417Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274978#274978">Neil</a></td></tr>
-<tr d-ix="3"><td>028</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>019</td><td>Perl 5 p</td><td>240814T163746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274980#274980">Xcali</a></td></tr>
+<tr d-ix="2"><td>045</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
+<tr d-ix="3"><td>012</td><td>Retina 0.8.2</td><td>240814T155417Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274978#274978">Neil</a></td></tr>
 <tr d-ix="4"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
 <tr d-ix="5"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> <s>28</s> 14 bytes</h1>
+<pre><code>ysk$yS$hdS&lt;*h'
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TY7PCoJAEMbvPsUgQn_Ig2uHDnrpCQSPEbG6Iy6urukKbQ_RC3TxEl17Hd-mpQ1rZmDm-803MPdnSfsKhRinPa9b2Sk4D1TwgiODpEMxMHS-i8TxfWikAtkAVRI0Kkf3FcSgdQ4R9NVjUIW_exWxwZ5OvZKl0bpcWDzdasob42bSAahPsGw7c1WsjAI4gHtxP9PGTCZmwaXNGQQk3IYk-Ln11da_gwRhEJKZ0CzPspwhRcwtPNqvxtH2Nw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Explanation</h2>
+<p>We are using a parser to do this <code>ysk</code> will repeatedly apply a parser until reaching a fixed point, it prioritizes parses towards the front of the input by default so we just need to write a parser which closes a loop.</p>
+<p>As I point out in <a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#comment591483_274973">my comment</a> it doesn't matter if you prioritize loops by their start or end location.</p>
+<p>Then the loop itself is <code>yS$hdS&lt;*h'</code>, i.e. parse a character, parse some number of characters, parse the same character again returning only the last parse.</p>
+<h1>Reflection</h1>
+<p>THis answer is pretty tight, but there was definitely some room for improvement on hgl that we see could see in earlier versions of this answer.</p>
+<ul>
+<li>This might be shorter with a regex if hgl flavored regexes could handle back-references. Implementing that is a big undertaking, but I always have to mention it.</li>
+<li>There's probably good cause to have <code>Rv h'</code> as a built-in, and might as well add <code>Rv h_</code> too.</li>
+<li>There could be a function to sandwich a parser between two copies of another parser. Basically
+<pre><code>f x y = x &lt;&gt; y &lt;&gt; x
+</code></pre>
+And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 19 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>s/(.).*\1/$1/&amp;&amp;redo
 </code></pre>
 <p><a href="https://tio.run/##JYgxDoAgEMD2e4cxaiJwoM/wBy4CN5gYIeCAPt5TY9upkdI2MmfZiFZ0M8oKZV0n8oG5QHmBNfwCajMYjVDO6@87Gg0aDYt11jpPC5G7QzzWsGfup1EoVNzH7QE" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r&quot;(.).*\1&quot;,r&quot;\1&quot;,x)
 import re
 </code></pre>
@@ -53,7 +72,7 @@ import re
 <h3>How?</h3>
 <p>Similar to other regex based answers. Things that may or may not be Python specific: <code>re.sub</code> only finds non-overlapping matches. Therefore we use a look ahead assertion for the second copy of the repeat element so it remains available for further matches. <code>*?</code> is a non greedy version of <code>*</code>. Here it makes sure the match stretches only to the first reoccurrence of the  repeat element.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 12 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 12 bytes</h1>
 <pre><code>+`(.).*\1
 $1
 </code></pre>
@@ -63,28 +82,6 @@ $1
 $1
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fuyghxkhPS0NDT1NPS5NLxfD//wquCiDgysyHQC5DI2MTYyNDrorKKggCiRgZGhsaG3ElJiUnJSWnpCampiYDAA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation: The <code>r</code> indicates right-to-left matching, so as many characters from the right as possible are matched that still allow a pair of identical characters to be matched.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> 28 bytes</h1>
-<pre class="lang-haskell prettyprint-override"><code>k=Rv h'
-</code></pre>
-<pre><code>ysk$k&lt;&gt;yS(hdS&lt;*k)&lt;&gt;k
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNp8zcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRACXrq5CXn6JQn6eQmJJvkJlaglXZXG2gq1CZWWygo1CcfbS0pI0XYt92bZBZQoZ6lxptkBplWwbu8pgjYyUYButbE0bO6iim325iZl5QL0p-VwKCrnxChoFRUAz0jSBPAWFaAWlCiUwSwfIAgI4JzMfAuEChkbGJsZGhgjVlVUQhKzCyNDY0NgILpKYlJyUlJySmpiamgwRjIW4asECCA0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<h2>Explanation</h2>
-<p>We are using a parser to do this <code>ysk</code> will repeatedly apply a parser until reaching a fixed point, so we just need to write a parser which does one step of the task.</p>
-<p>As I point out in <a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#comment591483_274973">my comment</a> it doesn't matter if you prioritize loops by their start or end location.</p>
-<p>So we prioritize by the start. Parsers by default prioritize parsing more than less, so we create the parser <code>k=Rv h'</code> which acts as <code>h'</code> but with inverted priority.</p>
-<p>To do this we start with a <code>k</code>, which will parse up to the start of the loop. Then the loop itself is <code>yS$hdS&lt;k</code>, i.e. parse a character, parse some number of characters, parse the same character again returning only the last parse.  Then we have <code>k</code> just to complete the rest of the string, the inverted priority doesn't matter here.</p>
-<h1>Reflection</h1>
-<p>There's definitely some room for improvement on hgl that we see in this answer.</p>
-<ul>
-<li>This would be shorter with a regex if hgl flavored regexes could handle back-references. Implementing that is a big undertaking, but I always have to mention it.</li>
-<li>Since I am defining <code>k</code> here, there's probably good cause to have <code>Rv h'</code> as a built-in, and might as well add <code>Rv h_</code> too.</li>
-<li>There could be a function to sandwich a parser between two copies of another parser. Basically
-<pre><code>f x y = x &lt;&gt; y &lt;&gt; x
-</code></pre>
-And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
-</ul>
 </div>
 <div id="pu4" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
 
