--- a/q/274973.html
+++ b/q/274973.html
@@ -26,23 +26,61 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>sed 4.2.2</td><td>240814T182151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274983#274983">Digital </a></td></tr>
-<tr d-ix="1"><td>009</td><td>Jelly</td><td>240814T175309Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274982#274982">Jonathan</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
-<tr d-ix="3"><td>019</td><td>Perl 5 p</td><td>240814T163746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274980#274980">Xcali</a></td></tr>
-<tr d-ix="4"><td>045</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
-<tr d-ix="5"><td>012</td><td>Retina 0.8.2</td><td>240814T155417Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274978#274978">Neil</a></td></tr>
-<tr d-ix="6"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
-<tr d-ix="7"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
+<tr d-ix="0"><td>061</td><td>Python</td><td>240814T183637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274984#274984">shape wa</a></td></tr>
+<tr d-ix="1"><td>017</td><td>sed 4.2.2</td><td>240814T182151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274983#274983">Digital </a></td></tr>
+<tr d-ix="2"><td>009</td><td>Jelly</td><td>240814T175309Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274982#274982">Jonathan</a></td></tr>
+<tr d-ix="3"><td>014</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="4"><td>019</td><td>Perl 5 p</td><td>240814T163746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274980#274980">Xcali</a></td></tr>
+<tr d-ix="5"><td>045</td><td>Python</td><td>240814T160801Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274979#274979">Albert.L</a></td></tr>
+<tr d-ix="6"><td>012</td><td>Retina 0.8.2</td><td>240814T155417Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274978#274978">Neil</a></td></tr>
+<tr d-ix="7"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
+<tr d-ix="8"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 17</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda s,i=0:i&lt;len(s)and f(s[:i]+s[s.rfind(s[i]):],i+1)or s
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=NY_NDoIwDMfvPkVvYwGMAw9mEV-EcNjYFpvgIGwmIOFJvHDRd_JtBMF_m7S_NunH8930_lrbaXrdvYlPn8xklbhJJcBFmB04nittA0eFVWACl3MsQpe7fWvQqpmxoLyIMGS0bsFtQ7xZANBCTjoSAelmLRHr1ZacJekxTdiv3T9W3-oJS1maLCBkKWWptNC6JAXfwaymResDQwY3QnyBYT6LjoSuu_-PfAE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Goes one by one through characters of the string, collapsing the range between the current character and its final occurrence. Using <code>abcbabadeefcbfggg</code> as an example:</p>
+<pre><code>abcbabadeefcbfggg -&gt; adeefcbfggg -&gt; adeefcbfggg -&gt; adefcbfggg -&gt; adefggg -&gt; adefg
+^                     ^               ^               ^              ^
+      ^               ^                ^                 ^             ^
+</code></pre>
+<p>Makes use of the same observations that Wheat Wizard and Jonathan Allan have made:</p>
+<ul>
+<li>It does not matter whether the &quot;earliest&quot; pair is based on the first or second element:</li>
+</ul>
+<pre><code>cAdBeBfAg -&gt; cAg &lt;=&gt; cAdBeBfAg -&gt; cAdBfAg -&gt; cAg
+ ^     ^                ^ ^        ^   ^
+</code></pre>
+<ul>
+<li>Assuming the &quot;earliest&quot; pair is based on the first element, it does not matter whether the first element is paired with the earliest or latest second element:</li>
+</ul>
+<pre><code>bAcAdAe -&gt; bAe &lt;=&gt; bAcAdAe -&gt; bAdAe -&gt; bAe
+ ^   ^              ^ ^        ^ ^
+</code></pre>
+<p>Ungolfed:</p>
+<pre class="lang-python prettyprint-override"><code>def f(s):
+    i = 0
+    while i &lt; len(s):
+        j = s.rfind(s[i])
+        # remove s[i:j]:
+        # s:     adefcbfggg -&gt; adefggg
+        # s[i]:     ^
+        # s[j]:        ^
+        # s[i:j]:   ^^^
+        s = s[:i] + s[j:]
+        i += 1
+    return s
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 17</h1>
 <pre><code>:
 s/(.).*\1/\1/
 t
 </code></pre>
 <p><a href="https://tio.run/##K05N@f/fiqtYX0NPU08rxlAfiLhK/v@v4KoAAq7MfAjkMjQyNjE2MuSqqKyCIJCIkaGxobERV2JSclJSckpqYmpqMte//IKSzPy84v@6rgA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṣị@ṪɗƬ1ZḢ
 </code></pre>
 <p>A monadic Link that accepts a list and yields the erased list.</p>
@@ -67,7 +105,7 @@ t
         Ḣ - head
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> <s>28</s> 14 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> <s>28</s> 14 bytes</h1>
 <pre><code>ysk$yS$hdS&lt;*h'
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TY7PCoJAEMbvPsUgQn_Ig2uHDnrpCQSPEbG6Iy6urukKbQ_RC3TxEl17Hd-mpQ1rZmDm-803MPdnSfsKhRinPa9b2Sk4D1TwgiODpEMxMHS-i8TxfWikAtkAVRI0Kkf3FcSgdQ4R9NVjUIW_exWxwZ5OvZKl0bpcWDzdasob42bSAahPsGw7c1WsjAI4gHtxP9PGTCZmwaXNGQQk3IYk-Ln11da_gwRhEJKZ0CzPspwhRcwtPNqvxtH2Nw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -86,13 +124,13 @@ t
 And it should probably have preloaded variants for <code>h'</code> and <code>h_</code>.</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 19 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 19 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>s/(.).*\1/$1/&amp;&amp;redo
 </code></pre>
 <p><a href="https://tio.run/##JYgxDoAgEMD2e4cxaiJwoM/wBy4CN5gYIeCAPt5TY9upkdI2MmfZiFZ0M8oKZV0n8oG5QHmBNfwCajMYjVDO6@87Gg0aDYt11jpPC5G7QzzWsGfup1EoVNzH7QE" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r&quot;(.).*\1&quot;,r&quot;\1&quot;,x)
 import re
 </code></pre>
@@ -106,7 +144,7 @@ import re
 <h3>How?</h3>
 <p>Similar to other regex based answers. Things that may or may not be Python specific: <code>re.sub</code> only finds non-overlapping matches. Therefore we use a look ahead assertion for the second copy of the repeat element so it remains available for further matches. <code>*?</code> is a non greedy version of <code>*</code>. Here it makes sure the match stretches only to the first reoccurrence of the  repeat element.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 12 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 12 bytes</h1>
 <pre><code>+`(.).*\1
 $1
 </code></pre>
@@ -117,13 +155,13 @@ $1
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fuyghxkhPS0NDT1NPS5NLxfD//wquCiDgysyHQC5DI2MTYyNDrorKKggCiRgZGhsaG3ElJiUnJSWnpCampiYDAA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation: The <code>r</code> indicates right-to-left matching, so as many characters from the right as possible are matched that still allow a pair of identical characters to be matched.</p>
 </div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
+<div id="pu7" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.).*\1/,&quot;$1&quot;))?s:f(s)
 </code></pre>
 <p><a href="https://tio.run/##hc3BCsIwDAbgu08xgodWtCWtJ6H6Il66LpPJsGMR2fbydbBDZQr@ySXwkf/uX55D33TPwyNWlFLt2J3ZOcGOVU9d6wMJLZRUuyvqPWwRpLzwqRYsU4gPji2pNt5ELWCAIkfKQuti2KzNHPhjmrgMZNPENUJjj9YgfDzCr7JxWhZy2Tj9@GTQojVZzcda@TKUZajIEwVYlKeQ3g" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>e/(.).*\1/Ï
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;code=ZS8oLikuKlwxL88&amp;input=ImFiY2JiY2RlYWVlYyI" rel="nofollow noreferrer">Try it</a></p>
