--- a/q/242666.html
+++ b/q/242666.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Pyth</td><td>240814T201012Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/274985#274985">int 21h </a></td></tr>
+<tr d-ix="0"><td>014</td><td>Pyth</td><td>240814T201012Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/274985#274985">int 21h </a></td></tr>
 <tr d-ix="1"><td>073</td><td>Python 3.6 with IO</td><td>220212T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/242758#242758">Deera Wi</a></td></tr>
 <tr d-ix="2"><td>020</td><td>Charcoal</td><td>220219T144142Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/243081#243081">Neil</a></td></tr>
 <tr d-ix="3"><td>037</td><td>Julia 1.0</td><td>220215T144411Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/242861#242861">MarcMush</a></td></tr>
@@ -49,11 +49,11 @@
 <tr d-ix="20"><td>007</td><td>Brachylog</td><td>220210T163654Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/242680#242680">Fatalize</a></td></tr>
 <tr d-ix="21"><td>012</td><td>Husk</td><td>220210T160152Z</td><td><a href="https://codegolf.stackexchange.com/questions/242666/is-given-number-a-concat-of-two-squares/242678#242678">Dominic </a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 15 bytes</h1>
-<pre><code>}Qmsjk^R2d*SQUh
+<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 14 bytes</h1>
+<pre><code>}Qmsjk^R2d*SQU
 </code></pre>
-<p><a href="https://tio.run/##K6gsyfj/vzYwtzgrOy7IKEUrODAUKGBpAAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
-<p><a href="https://tio.run/##K6gsyfj/36c2Kbc4KzsuyChFKzgjKTQ4IyPpf6VvtKGhgqWBgqGBgaGCoZkJkAGiFSwVLA1N/gMA" rel="nofollow noreferrer" title="Pyth – Try It Online">Test cases</a></p>
+<p><a href="https://tio.run/##K6gsyfj/vzYwtzgrOy7IKEUrODD0/39LAwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K6gsyfj/36c2Kbc4KzsuyChFKzgjKRSI/1f6RhsaKlgaKBgaGBgqGJqZABkgWsFSwdLQ5D8A" rel="nofollow noreferrer" title="Pyth – Try It Online">Test cases</a></p>
 <p>A program that takes an integer value and outputs <code>True</code> for the 'concats of two squares', <code>False</code> otherwise. The calculation time for the large values exceeds 1 minute.</p>
 <h4>Explanation:</h4>
 <pre class="lang-python prettyprint-override"><code>}Q              # check if the input value is in the list.
@@ -64,7 +64,7 @@
          d      # of the argument d
           *     # mapped over the cartesian product
            SQ   # of the range from 1 to Q
-             Uh # with the range from 0 to Q
+             U  # with the range from 0 to Q-1
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Python 3.6 (with IO), 73 bytes</h1>
