--- a/q/274951.html
+++ b/q/274951.html
@@ -26,9 +26,43 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
+<tr d-ix="1"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 49 bytes</h1>
+<pre><code>M?Gh.m_SsbmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZ
+</code></pre>
+<p><a href="https://tio.run/##K6gsyfj/39fePUMvNz64OCm32Nk32ag43afEPSWt0KNYKywkJC40w8MkNtYjPc3OKDW4OD0kMOr/f0sA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p>Can run up to about 30 before timing out online. Try a more performant, 5 byte longer version <a href="https://tio.run/##K6gsyfj/39fePUMvNz64OCm32Nk32ag43afEPSWt0KNYKywkRM85NKPYwcNIwSQ21iM9zc4oNbg4PSQw6v9/QwMDAwA" rel="nofollow noreferrer">here</a> (can easily do 1000 without timing out)</p>
+<p>This answer uses a recursive approach.</p>
+<h3>Explanation</h3>
+<pre><code>M?Gh.m_SsbmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZQ    # implicitly add Q
+                                                      # implicitly assign Q = eval(input())
+M                                                     # define g(G,h)
+ ?G                                ]]H                #   recursive base case, if G==0: return [[H]]
+                               UhH                    #   list(range(H+1))
+                              ^   4                   #   4x repeated cartesian product
+                      f                               #   filter this list on lambda T (this keeps only quadruplets whose squares sum to the desired value)
+                         s                            #     sum of
+                          *VTT                        #     vectorized product of T and T
+                       qH                             #     is equal to H
+          m                                           #   map over lambda d (this constructs possible outputs from the recursive calls)
+                 gLtGd                                #     map g over d with a first argument of G-1
+           sCMc2s                                     #     take four square matrices and put them in a bigger square
+    .m                                                #   filter down to elements which minimize lambda b
+        sb                                            #     sum of b
+       S                                              #     sorted
+      _                                               #     reversed
+   h                                                  #   take the first element
+                                       f        Z     # find the first integer which satisfies lambda T, counting up from 0
+                                             gTQ      #   g(T, Q)
+                                            s         #   flatten list
+                                          eS          #   largest element
+                                        &gt;2            #   is less than 2
+                                      g          Q    # apply g on the result and the input
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Íonîü2íε`U0LsãεXô]€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
 </code></pre>
 <p>Brute-force. Generates all <span class="math-container">\$2^k\times 2^k\$</span> sized matrices consisting of 0s and 1s, and will output the first valid one for the given input-integer <span class="math-container">\$n\$</span>.</p>
@@ -78,7 +112,7 @@
      Q     #  Check whether it now equals the (implicit) input-integer
            # (after which the found matrix is output implicitly)
 </code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f8/2uX0nHTTRw07lY3ObTm8xejwlkdNaw7v8Pe3zasFEkAF0YY6MGgAwrE60QY6KBBJxBBDBKEGqh@vGsIisQA" rel="nofollow noreferrer">Verify the resulting <span class="math-container">\$n\$</span> for a given matrix to test just this second step</a> (minus leading <code>.Δ</code> and trailing <code>Q</code>). I've added <code>=</code> after both <code>OO</code>, so you can see the intermediate steps of the reduction.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f8/2uX0nHTTRw07lY3ObTm8xejwlkdNaw7v8Pe3zasFEkAF0YY6MGgAwrE60QY6KBBJxBBDBKEGqh@vGsIisQA" rel="nofollow noreferrer">Verify the resulting <span class="math-container">\$n\$</span> for a given matrix to test just this second step</a> (minus leading <code>.Δ</code> and trailing <code>Q</code>). I've added <code>=</code> after both <code>OO</code>, so you can also see the intermediate steps of the reduction.</p>
 </div>
 
 <table id="st">
